# haskellNotes

./: README.md  haskellNotes.cabal
src/: BasicsAndSetup.hs  Datatypes.hs  HigherOrderFunctions.hs  Lesson1.hs  LetWhereBindings.hs  Newtypes.hs  PatternMatchingAndGuards.hs  PolymorphicFunctions.hs  TypeAlias.hs  TypeClasses.hs
