cabal-version:       2.4
name:                haskellNotes
version:             0.0.0.0
synopsis:            Learn Haskell basics in 4 pull requests
description:         Mikey's Haskell Nots
license:             MPL-2.0
license-file:        LICENSE
author:              Mikey
maintainer:          Mikey
copyright:           2020 Mikey Yau
build-type:          Simple
extra-doc-files:     README.md
                     CHANGELOG.md
tested-with:         GHC == 8.10.2

source-repository head
  type:                git
  location:            ??? git url for repo

common common-options
  build-depends:       base ^>= 4.14.0.0

  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wredundant-constraints
  if impl(ghc >= 8.2)
    ghc-options:       -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:       -Wpartial-fields
  if impl(ghc >= 8.10)
    ghc-options:       -Wunused-packages

  default-language:    Haskell2010

common common-doctest
  import:              common-options
  hs-source-dirs:      test
  build-depends:       doctest ^>= 0.17
  ghc-options:         -threaded

library
  import:              common-options
  hs-source-dirs:      src
  exposed-modules:     Chapter1
                       Chapter2
                       Chapter3
                       Chapter4

test-suite learn4haskell-test
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       Test.Chapter1
                       Test.Chapter2
                       Test.Chapter3
                       Test.Chapter4
  build-depends:       learn4haskell
                     , hspec ^>= 2.7.4
                     , hspec-hedgehog
                     , hedgehog  >= 1.0.2 && < 2 
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N

test-suite doctest-chapter1
  import:              common-doctest
  type:                exitcode-stdio-1.0
  main-is:             DoctestChapter1.hs

test-suite doctest-chapter2
  import:              common-doctest
  type:                exitcode-stdio-1.0
  main-is:             DoctestChapter2.hs

test-suite doctest-chapter3
  import:              common-doctest
  type:                exitcode-stdio-1.0
  main-is:             DoctestChapter3.hs

test-suite doctest-chapter4
  import:              common-doctest
  type:                exitcode-stdio-1.0
  main-is:             DoctestChapter4.hs
